@startuml

class item
class player
class mob
interface creature
interface world_object
interface tiled_object
class chest
class door

class world {
    <uuid, players> : input_taker*
}

class corpse
interface dynamic_object
class projectile
interface input_taker

enum floors {
    wall
    void
    water
    deep_water
    walkable
}

tiled_object ---|> world_object
projectile --|> dynamic_object
dynamic_object --|> world_object
creature --|> dynamic_object
player --|> creature
mob --|> creature
corpse --|> world_object
door --|> tiled_object
chest --|> tiled_object
player --|> input_taker

item "*" <-- player : inventory
world_object "*" <- world
note on link : quadtree

world -> "*" floors : map

@enduml